_sass/layout/_header.scss
.header {
  @extend %container-fluid;
  @extend %px-lq-5;
  // transform: scale(1); What is this for?
  transition: 0.25s all ease;
}

.navbar {
  @extend %navbar-toggleable-sm;
  @extend %py-3;
  font-size: $font-size-small;
}

.navbar-flex-container {
  @extend %d-flex;
  @extend %justify-content-between;
}

.navbar-logo {
  @include brandmark;
}

.navbar-toggler {
  @extend %align-self-center;
  @extend %p-0;
}

.navbar-toggler[aria-expanded=true] {
  .burger {
    span {
      background-color: transparent;

      &:before, &:after {
        top: 0;
      }

      &:before {
        transform: rotate(45deg);
      }

      &:after {
        transform: translateY(-8px) rotate(-45deg);
        top: 8px;
      }
    }
  }
}

.burger {
  cursor: pointer;
  padding: 8px 30px 14px 0px;

  &:hover, &:focus {
    span, span:before, span:after {
      background-color: $nav-toggler-hover-color;
    }
  }

  span, span:before, span:after {
    cursor: pointer;
    border-radius: 10px;
    height: 4px;
    width: 30px;
    background: $nav-toggler-color;
    position: absolute;
    display: inline-block;
    content: '';
    transition: all 150ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
  }

  span:before {
    top: -8px;
  }

  span:after {
    bottom: -8px;
  }
}

.can-touch {
  .navbar-toggler[aria-expanded=true] {
    .burger {
      &:hover {
        span {
          background-color: transparent;
        }
      }
    }
  }

  .burger {
    &:hover {
      span, span:before, span:after {
        background-color: $nav-toggler-color;
      }
    }
  }
}

.navbar-collapse {
  @extend %justify-content-end;
}

.nav-item {
  &:last-child {
    @extend %pr-0;
  }
}

.nav-link {
  @extend %nav-link-decoration;
  border-radius: 0.25rem;

  span {
    padding: 0 7px;
    background: transparent;
  }

  &:hover {
    background-color: $brand-gray-light;
  }

  &[aria-current] {
    span {
      font-weight: 700;
    }
  }

  @include media-breakpoint-up(sm) {
    border: 1px solid transparent;
    border-bottom: none;
  }
}

.dropdown-menu {
  background-color: $sk-yellow;
  border: none;
  border-radius: 0 0.25rem 0.25rem 0.25rem;
  font-size: $font-size-small;
  margin-top: 0;

  @include media-breakpoint-up(sm) {
    border: 1px solid #d2aa56;
    margin-top: -1px;
    min-width: 9rem;
    z-index: 1;
  }
}

.dropdown-item {
  padding-left: 15px;

  &:focus,
  &:hover {
    background-color: darken($sk-yellow, 15%);
  }
}

// Restore dropdown focus browser default style
.dropdown-toggle {
  border-radius: 0.25rem;

  &:focus {
    outline: 5px auto -webkit-focus-ring-color;
  }

  &::after {
    @include media-breakpoint-up(sm) {
      margin-left: 0;
    }
  }

  @include media-breakpoint-up(sm) {
    position: relative;
    z-index: 9999;
  }
}

@include media-breakpoint-down(md) {
  .nav-link {
    span {
      padding: 0 3px;
      background: transparent;
    }
  }
}

@include media-breakpoint-down(sm) {
  .navbar-nav {
    padding-top: 20px;
  }
}

.dropdown-toggle[aria-expanded="true"] {
  background-color: $sk-yellow;
  border-radius: 0.25rem 0.25rem 0 0;

  @include media-breakpoint-up(sm) {
    border: 1px solid #d2aa56;
    border-bottom: none;
  }
}

// .navbar-collapse {
//   &.collapsing[aria-expanded="true"],
//   &.show {
//     height: 100vh !important;
//   }
// }

